5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1723_2504.log
== TEST (2019-05-14 11:08:39) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = float(input("Percentual de multiplicacao diaria do virus: "))
d = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
k = 0
while(2*a<b):
	cpa= (a*c)/100
	cpb= (b*d)/100
	a = a + cpa
	b = b + cpb
	k = k+1
print(k)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:14) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = float(input("Percentual de multiplicacao diaria do virus: "))
d = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
k = 0
while(2*a<b):
	cpa= (a*c)/100
	cpb= (b*d)/100
	a = a + cpa
	b = b + cpb
	k = k+1
	print(k)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:53) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = float(input("Percentual de multiplicacao diaria do virus: "))
d = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
k = 0
while(2*a<b):
	cpa= (a*c)/100
	cpb= (b*d)/100
	a = a + cpa
	b = b + cpb
	k = k+1
print(k)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:10:25) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = float(input("Percentual de multiplicacao diaria do virus: "))
d = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
k = 0
while(b<2a):
	cpa= (a*c)/100
	cpb= (b*d)/100
	a = a + cpa
	b = b + cpb
	k = k+1
print(k)
-- ERROR:
File "XXXX", line 6
    while(b<2a):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:10:38) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = float(input("Percentual de multiplicacao diaria do virus: "))
d = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
k = 0
while(b<2*a):
	cpa= (a*c)/100
	cpb= (b*d)/100
	a = a + cpa
	b = b + cpb
	k = k+1
print(k)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:10:49) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = float(input("Percentual de multiplicacao diaria do virus: "))
d = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
k = 0
while(b<2*a):
	cpa= (a*c)/100
	cpb= (b*d)/100
	a = a + cpa
	b = b + cpb
	k = k+1
print(k)
-- EXECUTION TIME:
0.109672
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
